fix jump-to-top of page on popup

--- a/app/styles.sass
+++ b/app/styles.sass
@@ -1,7 +1,7 @@
 .modal-open
 	overflow: hidden !important
-	position: fixed !important
 	width: 100% !important
+	//position: fixed !important
 .transparent
 	opacity: 0.87
 .fill
